fix(NumberInput): change unit color to ensure sufficient contrast ratio with background

--- a/src/components/editor/styles/NumberInput.css
+++ b/src/components/editor/styles/NumberInput.css
@@ -26,5 +26,5 @@
 
 .unit-text {
 	font: normal 1.4rem/1 sans-serif;
-	color: #72777d;
+	color: #666;
 }
